# litgpt_project

./: .gitignore  AGENTS.md  CLAUDE.md  COMPLETE_FIX_REPORT_ZH.md  DATA_PROCESSING_TOOLS.md  DEFAULT_TRAINING_CONFIGURATION.md  FINAL_SUMMARY_ZH.md  FLASH_ATTENTION_SUPPORT.md  README.md  TRAINING_FIXES_COMPLETE.md  benchmark_cleanup.py  benchmark_upload.py  conda_requirements.txt.backup  create_litgpt_config.py  custom_moe.py  direct_test.py  download_tinystories.py  evaluate.py  extract_data.py  final_verification.py  fixed_text_files.py  generate.py  generate_index_json.py  lit_model.pth  litgpt_config.yaml  litgpt_config_200m.yaml  main.py  model_config.yaml  prepare_data.py  pyproject.toml  pyproject.toml.backup  requirements.txt  run_train.py  run_train.py.backup  test_checkpoint_logging.py  test_fixes.py  test_flash_attention.py  test_mock.py  train_config.yaml  uv.lock.backup  (+1 more)
.claude/: settings.local.json
.claude/commands/: build.md  specify.md
.claude/skills/braingrid-cli/: skill.md
.github/workflows/: ci.yml  python-package.yml
.sisyphus/notepads/moe_200m_expansion/: decisions.md  issues.md  learnings.md  problems.md
configs/: AGENTS.md  benchmark_200m_adam.yaml  benchmark_200m_muon.yaml  benchmark_200m_window_adam.yaml  benchmark_200m_window_muon.yaml  benchmark_medium_adam.yaml  benchmark_medium_adam_bs8.yaml  benchmark_medium_muon.yaml  benchmark_medium_muon_bs8.yaml  dense_compile_flash_smoke_model.yaml  dense_compile_flash_smoke_train.yaml  kaggle_t4_ddp.yaml  local_rtx3060.yaml  local_rtx3060_full.yaml  local_rtx3060_moe300_fit6gb_baseline.yaml  local_rtx3060_moe300_fit6gb_smoke.yaml  local_rtx3060_test.yaml  moe_200m.yaml  moe_300m_fit6gb.yaml  moe_30m_debug.yaml  moe_400m.yaml  optimized_rtx3060.yaml  smoke_single_gpu.yaml  train_t4x2.yaml  train_tpu_v6e.yaml
docs/: AGENTS.md  model_arch_moe_review.md
docs/reports/: DATA_PROCESSING_SOLUTION.md  DEFAULT_TRAINING_CONFIGURATION.md  FINAL_IMPROVEMENT_REPORT_ZH.md  FIXES_SUMMARY.md  FLASH_ATTENTION_SUPPORT.md
scripts/: benchmark_evaluate_loading.py  enhanced_prepare_data.py  env_sanity_check.py  generate_index_json.py  setup_tpu_env.sh  test_compile.py  train_t4x2_kaggle.sh  verify_flash.py
scripts/archive/: run_train_old.py
src/: custom_moe.py  fixed_text_files.py  utils.py  wandb_dataset.py
src/litgpt_moe/: config.py  fixed_text_files.py  utils.py
step-00001000/: lit_model.pth
tests/: test_evaluate_dataloading.py  test_evaluate_dataset.py  test_evaluate_optimization.py  test_fixed_text_files_optimization.py  test_gpu_training.py  test_moe_compile.py  test_moe_router_stats.py  test_prepare_data.py  test_run_train.py  test_run_train_compile_moe.py  test_run_train_upload.py  test_sanity.py  test_smoke.py
tools/: AGENTS.md  env_sanity_check.py  inspect_litgpt_capture_hparams.py  inspect_litgpt_setup.py  verify_flash.py
