[project]
name = "litgpt-project"
version = "0.1.0"
description = "MoE TinyStories with LitGPT - Mixture of Experts Language Model"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "litgpt",
    "lightning",
    "pyyaml",
    "requests",
    "wandb",
    "tokenizers",
    "datasets",
    "accelerate",
    "transformers",
    "safetensors",
    "sentencepiece",
    "bitsandbytes",
    "litdata>=0.2.59",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
