[project]
name = "litgpt-project"
version = "0.1.0"
description = "MoE TinyStories with LitGPT - Mixture of Experts Language Model"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch>=2.10.0,<2.11",
    "torchvision>=0.25.0,<0.26",
    "torchaudio>=2.10.0,<2.11",
    "litgpt",
    "lightning",
    "pyyaml",
    "requests",
    "wandb",
    "tokenizers",
    "datasets",
    "accelerate",
    "transformers",
    "safetensors",
    "sentencepiece",
    "bitsandbytes",
    "litdata>=0.2.59",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
